--- a/day1.ipynb
+++ b/day1.ipynb
@@ -27,13 +27,86 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"hai\")"
+    "print(\"hai\")\n",
+    "\n",
+    "iiuuio\n",
+    "ljj\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'SDE_4_Month_Weekly_Tracker.xlsx'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Create a customized weekly tracker structure\n",
+    "weeks = [f\"Week {i}\" for i in range(1, 17)]\n",
+    "tasks = [\n",
+    "    \"Programming Language Course (Java/Python/C++)\",\n",
+    "    \"DSA Learning (Udemy Course)\",\n",
+    "    \"Daily Practice on LeetCode/HackerRank\",\n",
+    "    \"Backend Project Development (Node.js/Django)\",\n",
+    "    \"System Design Course (Grokking OOD)\",\n",
+    "    \"Frontend Project Development (React)\",\n",
+    "    \"Cloud Basics (AWS)\",\n",
+    "    \"DevOps Tools (Docker/Kubernetes)\",\n",
+    "    \"Mock Interviews & System Design Practice\",\n",
+    "    \"DSA Problem-Solving (Medium/Hard)\",\n",
+    "]\n",
+    "\n",
+    "# Initialize a DataFrame for progress tracking\n",
+    "tracker_data = {task: [\"\"] * 16 for task in tasks}\n",
+    "tracker_data[\"Week\"] = weeks\n",
+    "tracker_df = pd.DataFrame(tracker_data)\n",
+    "\n",
+    "# Reorder columns to have 'Week' as the first column\n",
+    "tracker_df = tracker_df[[\"Week\"] + tasks]\n",
+    "\n",
+    "# Save the tracker to an Excel file\n",
+    "file_path = 'SDE_4_Month_Weekly_Tracker.xlsx'\n",
+    "tracker_df.to_excel(file_path, index=False)\n",
+    "\n",
+    "file_path\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
